CHANGES.txt for Tux Paint

Tux Paint - A simple drawing program for children.

Copyright (c) 2004 by Bill Kendrick
bill@newbreedsoftware.com
http://www.newbreedsoftware.com/tuxpaint/


2004.Mar.04 (0.9.14) [cvs]
  * Afrikaans translation created.
    Petri Jooste <rkwjpj@puk.ac.za>

  * Serbian translation created.
    Aleksandar Jelenak <jelenak@netlinkplus.net>

  * Korean language file (ko.po) update.
    Mark K. Kim <tuxNO_SOLICITATIONpaint-dev@cbreak.org>

  * Fixed security issue with permissions to Tux Paint docs directory.
    Mark K. Kim <tuxNO_SOLICITATIONpaint-dev@cbreak.org>

  * Made sure KDE icon directories exist before trying to copy files to them.
  
  * Fixed crash bug when switching from different tools with scrolling
    collections, and then scrolling.
    Thanks to Kevin Jarrett for the report, and John Popplewell for a
    replicable way of crashing it.

  * Made sure shape tool never made a tiny shape.
    (Should hint users that they should click-and-drag.)

  * Added some more brushes.
    Jeremie Zimmermann <txptdv@tofz.org>

  * Now prompts to confirm before printing.

  * Updated/corrected Tamil translation
    Mugunth <mugunth@thamizha.com>

  * Updated README documentation.
  
  * Made some colors more unique, so that they affected stamps better.
    (e.g., purple and magenta used to look the same when used to tint a stamp)
    Karl Ove Hufthammer <karl@huftis.org>

  * Updated punctuation in many text strings.
    Karl Ove Hufthammer <karl@huftis.org>

  * Keywords ("Title" and "Software") now written into PNGs.

  * Fixed 'savedir' bug.  (Was dropping filenames)

  * Made current image the selected image on Open screen, if applicable.


2003.Dec.23 (0.9.13)
  * Translated into Basque (eu_ES)
    Juan Irigoien <juanirigoien@irakasle.net>

  * Translated into Norwegian Bokmal (nb_NO)
    Dag H. Loras <dag.loraas@operamail.com>

  * Translated into Tamil (ta_IN)  [buggy]
    Mugunth <mugunth@thamizha.com>
