@@ -23,7 +23,7 @@ New Breed Software</p>
 <p><a href="mailto:bill@newbreedsoftware.com">bill@newbreedsoftware.com</a><br>
 <a href="http://www.newbreedsoftware.com/tuxpaint/">http://www.newbreedsoftware.com/tuxpaint/</a></p>
 
-<p>June 14, 2002 - March 4, 2004</p>
+<p>June 14, 2002 - March 17, 2004</p>
 </center>
 
 <hr size=2 noshade>
@@ -624,6 +624,11 @@ New Breed Software</p>
 	    <td>&nbsp;</td>
 	  </tr>
 	  <tr>
+	    <td><code>slovenian</code></td>
+	    <td>&nbsp;</td>
+	    <td>&nbsp;</td>
+	  </tr>
+	  <tr>
 	    <td><code>swedish</code></td>
 	    <td><code>svenska</code></td>
 	    <td>&nbsp;</td>
@@ -982,14 +987,19 @@ New Breed Software</p>
 	<td>Slovak</td>
       </tr>
       <tr>
-        <td><code>sv_SE@euro</code></td>
-	<td>Svenska</td>
-	<td>Swedish</td>
+        <td><code>sl_SI</code></td>
+	<td>&nbsp;</td>
+	<td>Slovenian</td>
       </tr>
       <tr>
         <td><code>sr_YU</code></td>
 	<td>&nbsp;</td>
 	<td>Serbian</td>
+      </tr>
+      <tr>
+        <td><code>sv_SE@euro</code></td>
+	<td>Svenska</td>
+	<td>Swedish</td>
       </tr>
       <tr>
         <td><code>ta_IN</code> (*)</td>
