@@ -1,5 +1,5 @@
-.\" tuxpaint.1 - 2004.03.04
-.TH TUXPAINT 1 "04 Mar 2004" "0.9.14" "Tux Paint"
+.\" tuxpaint.1 - 2004.03.17
+.TH TUXPAINT 1 "17 Mar 2004" "0.9.14" "Tux Paint"
 .SH NAME
 tuxpaint -- A drawing program for young children.
 
@@ -437,6 +437,7 @@ Herman Bruyninckx,
 Laurentiu Buzdugan,
 Pere Pujal Carabantes,
 Jacques Chion,
+Urska Colner,
 Ricardo Cruz,
 Doruk Fisek,
 Dovix,
