@@ -7,12 +7,15 @@ bill@newbreedsoftware.com
 http://www.newbreedsoftware.com/tuxpaint/
 
 
-2004.Mar.04 (0.9.14) [cvs]
+2004.Mar.17 (0.9.14) [cvs]
   * Afrikaans translation created.
     Petri Jooste <rkwjpj@puk.ac.za>
 
   * Serbian translation created.
     Aleksandar Jelenak <jelenak@netlinkplus.net>
+
+  * Slovenian translation created.
+    Urska Colner <ursacol02@users.sourceforge.net>
 
   * Korean language file (ko.po) update.
     Mark K. Kim <tuxNO_SOLICITATIONpaint-dev@cbreak.org>
